--- a/default/main.yaml
+++ b/default/main.yaml
@@ -1,41 +1,3 @@
-#Windows 10 version
-- name: Windows 10
-  os: windows
-  build:
-    - cmd: echo "Hello, Windows!"
-
-#Initial admin user
-- name: Initial Admin User
-  os: windows
-  build:
-    - cmd: net user /add catman password
-    - cmd: net localgroup administrators catman /add
-
-#Password policy
-- name: Password Policy
-  os: windows
-  build:
-    - cmd: net accounts /maxpwage:180
-    - cmd: net accounts /minpwlen:8
-    - cmd: net accounts /uniquepw:1
-
-#Retrieve recommended GPO from Microsoft Security Compliance Toolkit (SCT) and apply it
-- name: Apply SCT GPO
-  os: windows
-  build:
-    - cmd: Invoke-WebRequest -Uri "https://www.microsoft.com/en-us/download/confirmation.aspx?id=55319" -OutFile "C:\Users\catman\Downloads\Windows10andWindowsServer2016SecurityBaseline.zip"
-    - cmd: Expand-Archive -Path "C:\Users\catman\Downloads\Windows10andWindowsServer2016SecurityBaseline.zip" -DestinationPath "C:\Users\catman\Downloads\Windows10andWindowsServer2016SecurityBaseline"
-    - cmd: Import-Module "C:\Users\catman\Downloads\Windows10andWindowsServer2016SecurityBaseline\BaselineLocalGroupPolicy.psm1"
-    - cmd: Set-SecurityBaseline -LocalGpoPath "C:\Users\catman\Downloads\Windows10andWindowsServer2016SecurityBaseline\BaselineLocalGroupPolicy.xml"
-
-#Install Windows updates
-- name: Install Windows Updates
-  os: windows
-  build:
-    - cmd: wuauclt /updatenow
-
-#Remove bloat apps from Windows 10
-- name: Remove Bloat Apps
-  os: windows
-  build:
-    - cmd: Get-AppxPackage -AllUsers | Remove-AppxPackage
+- ipRangeStart: 10.101.30.2
+- ipRangeEnd: 10.101.30.254
+- Windows10EntISO: "https://software-download.microsoft.com/download/pr/18362.30.190401-1528.19h1_release_svc_refresh_CLIENTENTERPRISEEVAL_OEMRET_x64FRE_en-us.iso"
